--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+body {
+    font-family: arial, sans-serif;
+}
+
+
 /* The snackbar - position it at the bottom and in the middle of the screen */
 #snackbar {
   visibility: hidden; /* Hidden by default. Visible on click */
