--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,19 @@ body {
     font-family: monospace;
     font-size: 1.3em;
 }
-
+a.repeatable {
+	text-decoration: none;
+	
+}
+a.repeatable, a.repeatable:visited {
+	color: #040;
+}
+a.repeatable:hover {
+	text-decoration: underline;
+}
+#clean-now {
+	float: right;
+}
 /* The snackbar - position it at the bottom and in the middle of the screen */
 #snackbar {
   visibility: hidden; /* Hidden by default. Visible on click */
