--- a/py/static/css/styles.css
+++ b/py/static/css/styles.css
@@ -42,3 +42,16 @@ input[type=submit]:hover {
 .narrow-form {
 
 }
+
+.below {
+  position: absolute;
+  width: 100%;
+  bottom: 0px;
+  text-align: center;
+  margin-bottom: 5px;
+}
+.below .username {
+  font-family: monospace;
+  font-weight: bold;
+}
+
