--- a/py/templates/base.html
+++ b/py/templates/base.html
@@ -44,7 +44,6 @@
        class="w3-right w3-xlarge w3-padding-large w3-hover-black w3-hide-large" title="Close Menu">
         <i class="fa fa-remove"></i>
     </a>
-    <h4 class="w3-bar-item"><b>Menu</b></h4>
     <a href="{{ url_for('passgen.index') }}" class="w3-bar-item w3-button w3-hover-black a-nav">Генератор паролей</a>
     {% if g.user %}
         <a href="{{ url_for('passgen.resources') }}" class="w3-bar-item w3-button w3-hover-black a-nav">Ресурсы</a>
@@ -52,6 +51,7 @@
     <a href="#" class="w3-bar-item w3-button w3-hover-black a-nav">О проекте</a>
     {% if g.user %}
         <a class="w3-bar-item w3-button w3-hover-black a-nav" href="{{ url_for('auth.logout') }}">👤 Выйти</a>
+        <div class="below">Login: <span class="username">{{ g.user.login }}</span></div>
     {% else %}
         <a class="w3-bar-item w3-button w3-hover-black a-nav" href="{{ url_for('auth.login') }}">👤 Войти</a>
         <a class="w3-bar-item w3-button w3-hover-black a-nav"
@@ -80,9 +80,9 @@
         {#      <h4>Footer</h4>#}
         {#    </div>#}
 
-        <div class="w3-container w3-theme-l1" style="position: fixed; bottom: 0px; width: 100%">
-            <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-        </div>
+{#        <div class="w3-container w3-theme-l1" style="position: fixed; bottom: 0px; width: 100%">#}
+{#            <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>#}
+{#        </div>#}
     </footer>
 
     <!-- END MAIN -->
