--- a/py/templates/index.html
+++ b/py/templates/index.html
@@ -7,6 +7,24 @@
 
 <div id="snackbar"></div>
 <div id="cover" class="cover">&nbsp;</div>
+
+    <div id="resource-select">
+
+        <span>Ресурс</span><input type="text" id="resource-name">
+        <div id="matching-resources"></div>
+    <div id="matching-resources-extender">▼</div>
+
+    URL
+    <input type="url" id="resource-url">
+    <a href="#" id="resource-a">Перейти</a>
+
+    </div>
+
+<div id="account-select">
+Аккаунт
+</div>
+
+
 <div class="res" style="display:none; overflow:hidden">
 <h2>Результат</h2>
 <table >
