--- a/py/static/css/styles.css
+++ b/py/static/css/styles.css
@@ -55,3 +55,29 @@ input[type=submit]:hover {
   font-weight: bold;
 }
 
+#matching-resources {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  border: 1px solid #ddd;
+}
+.resource-found {
+  flex: 1;
+  margin: 6px;
+  padding: 4px;
+  white-space: nowrap;
+  border: 1px solid #ccc;
+  text-align: center;
+  border-radius: 6px;
+  background-color: #eee;
+  display: inline;
+  width: fit-content;
+}
+#matching-resources-extender {
+  display: none;
+  background-color: #ddd;
+  text-align: center;
+  width: 100%;
+  padding-top: 0px;
+  margin-top: 0px;
+}
