All params done; save last resource and hash

--- a/py/static/css/styles.css
+++ b/py/static/css/styles.css
@@ -141,6 +141,7 @@ span.form-label-primary {
 .selected-value {
   font-family: monospace;
   font-weight: bold;
+  color: darkgreen;
 }
 span.form-label {
   display: block;
