--- a/py/templates/index.html
+++ b/py/templates/index.html
@@ -2,6 +2,7 @@
 {% block title %}Генератор паролей{% endblock %}
 {% block content %}
     <script src="{{ url_for('static', filename='js/sha.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/crypto.js') }}"></script>
     <script src="{{ url_for('static', filename='js/gen.js') }}"></script>
 
 
@@ -12,7 +13,10 @@
         <span class="form-label form-label-first form-label-primary"><span class="folded-icon">▼</span>Ресурс <span
                 id="selected-resource" class="selected-value"></span><span id="selected-resource-new"
                                                                            class="selected-value-new"> (новый)</span></span>
-        <div class="resource-finder foldee"><input type="text" id="resource-name">
+        <div class="resource-finder foldee">
+            <input type="text" id="resource-name" autocomplete="off" readonly
+                onclick="this.removeAttribute(
+                    'readOnly');">
             <div id="matching-resources" class="matching-values"></div>
             <div id="matching-resources-extender" class="matching-extender">▼</div>
         </div>
@@ -61,7 +65,10 @@
             </div>
         </div>
         <span class="form-label-secondary form-label">Мастер-пароль</span>
-        <input type="password" name="master" id="master-input" class="input-master">
+        <input type="password" name="master" id="master-input" class="input-master" autocomplete="new-password" readonly
+                onclick="this.removeAttribute(
+                    'readOnly');" onblur="this.setAttribute(
+                    'readOnly', 'readonly');">
         <input type="button" name="generate" value="Генерировать" onclick="generate_click()">
         <div class="res" style="display:none; overflow:hidden">
             <h2>Результат</h2>
