--- a/py/static/css/styles.css
+++ b/py/static/css/styles.css
@@ -174,3 +174,33 @@ span.form-label-secondary {
 .nowidth {
   width: auto!important;
 }
+
+/*.circle-progress {*/
+/*  width: auto;*/
+/*  height: 1.2em;*/
+/*}*/
+/*.circle-progress-value {*/
+/*	stroke-width: 6px;*/
+/*	stroke: hsl(100, 100%, 60%);*/
+/*	stroke-dasharray: 0.6 3;*/
+/*}*/
+/*.circle-progress-circle {*/
+/*	stroke-width: 6px;*/
+/*	stroke: #ddd;*/
+/*	stroke-dasharray: 0.6 3;*/
+/*	stroke-dashoffset: 1.6;*/
+/*}*/
+/*.circle-progress-text {*/
+/*	font-family: "Gotham Rounded Light";*/
+/*	fill: hsl(100, 81%, 55%);*/
+/*	font-size: large;*/
+/*}*/
+
+.progress {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  background: rgba(90, 200, 100, 0.9);
+  z-index: -1 ;
+}
