--- a/py/templates/index.html
+++ b/py/templates/index.html
@@ -71,7 +71,7 @@
             <span class="form-label form-label-primary" id="result-label" style="position: relative"><div
                     class="progress"></div>Результат</span>
             <span class="form-label form-label-secondary">Хеш мастер-пароля</span>
-            <div class="result"><span class="result-value" id="master-sha"></span></div>
+            <div class="result"><span class="result-value" id="master-sha"></span><span id="sha-status"></span></div>
             <span class="form-label form-label-secondary">Пароль</span>
 
             <div class="pwd">
